--- a/src/common/styles/bootstrap-3.3.5/less/bootstrap.less
+++ b/src/common/styles/bootstrap-3.3.5/less/bootstrap.less
@@ -51,6 +51,9 @@
 @import "popovers.less";
 @import "carousel.less";
 
+// Bootswatch theme
+@import "bootswatch.less";
+
 // Utility classes
 @import "utilities.less";
 @import "responsive-utilities.less";
