--- a/src/common/styles/sb-admin-2.less
+++ b/src/common/styles/sb-admin-2.less
@@ -5,7 +5,7 @@
  */
 
 body {
-    background-color: #f8f8f8;
+    background-color: #4E5D6C;
 }
 
 #wrapper {
@@ -15,7 +15,7 @@ body {
 #page-wrapper {
     padding: 20px;
     min-height: 568px;
-    background-color: #fff;
+    background-color: #66798c;
 }
 
 @media(min-width:768px) {
@@ -23,7 +23,7 @@ body {
         position: inherit;
         margin: 0 0 0 250px;
         padding: 0 30px;
-        border-left: 1px solid #e7e7e7;
+        border-left: 1px solid #66798c;
     }
 }
 
@@ -94,12 +94,13 @@ body {
     padding: 15px;
 }
 
-.sidebar ul li {
-    border-bottom: 1px solid #e7e7e7;
-}
 
 .sidebar ul li a.active {
-    background-color: #eee;
+    background-color: #66798c;
+}
+
+.sidebar ul li a:hover {
+    background-color: #66798c;
 }
 
 .sidebar .arrow {
