cleared content and set up proper routes

--- a/src/common/styles/bootstrap-3.3.5/less/panels.less
+++ b/src/common/styles/bootstrap-3.3.5/less/panels.less
@@ -15,6 +15,7 @@
 // Panel contents
 .panel-body {
   padding: @panel-body-padding;
+  background-color: @gray-bit-lighter;
   &:extend(.clearfix all);
 }
 
