--- a/src/common/styles/sb-admin-2.less
+++ b/src/common/styles/sb-admin-2.less
@@ -5,7 +5,7 @@
  */
 
 body {
-    background-color: #4E5D6C;
+    background-color: @gray-light;
 }
 
 #wrapper {
@@ -15,7 +15,8 @@ body {
 #page-wrapper {
     padding: 20px;
     min-height: 568px;
-    background-color: #66798c;
+    background-color: @white;
+    color: @black;
 }
 
 @media(min-width:768px) {
@@ -23,7 +24,7 @@ body {
         position: inherit;
         margin: 0 0 0 250px;
         padding: 0 30px;
-        border-left: 1px solid #66798c;
+        border-left: 1px solid @white;
     }
 }
 
@@ -96,11 +97,11 @@ body {
 
 
 .sidebar ul li a.active {
-    background-color: #66798c;
+    background-color: @gray-darker;
 }
 
 .sidebar ul li a:hover {
-    background-color: #66798c;
+    background-color: @gray-darker;
 }
 
 .sidebar .arrow {
