--- a/src/common/styles/bootstrap-3.3.5/less/buttons.less
+++ b/src/common/styles/bootstrap-3.3.5/less/buttons.less
@@ -132,7 +132,7 @@
 
 .btn-lg {
   // line-height: ensure even-numbered height of button next to large input
-  .button-size(@padding-large-vertical; @padding-large-horizontal; @font-size-large; @line-height-large; @btn-border-radius-large);
+  .button-size(@padding-base-vertical; @padding-base-horizontal; @font-size-large; @line-height-large; @btn-border-radius-large);
 }
 .btn-sm {
   // line-height: ensure proper height of button next to small input
