start querying instagram for tagged pictures using Flux

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   <title>Social Commerce</title>
   
 </head>
@@ -13,6 +12,6 @@
     user = false;
   </script>
 
-  <script src="app.js"></script>
+  <script src="/app.js"></script>
 </body>
 </html>
