search for tags after authenticating instagram account through oauth

--- a/src/common/styles/bootstrap-3.3.5/less/variables.less
+++ b/src/common/styles/bootstrap-3.3.5/less/variables.less
@@ -18,6 +18,7 @@
 @gray-lighter:           #EBEBEB; // #eee
 @white:                  #FFFFFF;
 @black:                  #000000;
+@off-white:              #dddddd;
 
 
 @brand-primary:         #DF691A;
