--- a/src/common/styles/sb-admin-2.less
+++ b/src/common/styles/sb-admin-2.less
@@ -15,7 +15,7 @@ body {
 #page-wrapper {
     padding: 20px;
     min-height: 568px;
-    background-color: @white;
+    background-color: @off-white;
     color: @black;
 }
 
@@ -24,7 +24,7 @@ body {
         position: inherit;
         margin: 0 0 0 250px;
         padding: 0 30px;
-        border-left: 1px solid @white;
+        border-left: 1px solid @off-white;
     }
 }
 
