--- a/src/common/styles/bootstrap-3.3.5/less/variables.less
+++ b/src/common/styles/bootstrap-3.3.5/less/variables.less
@@ -21,7 +21,8 @@
 @off-white:              #dddddd;
 
 
-@brand-primary:         #DF691A;
+//@brand-primary:         #DF691A;
+@brand-primary:         @gray-medium;
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
